create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1611,10 +1611,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -2267,10 +2267,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -3028,10 +3028,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -4735,10 +4735,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -5460,10 +5460,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -6079,10 +6079,10 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
 .cid-uaFQVHh9tT {
@@ -6766,9 +6766,9 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
-.cid-uaFR6cxUxe {
+.cid-uccIhBRSyC {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #c84673;
+  background-color: #2e481a;
   overflow: hidden;
 }
