--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1611,6 +1611,12 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
+}
 .cid-uaFQVHh9tT {
   z-index: 1000;
   width: 100%;
@@ -2260,6 +2266,12 @@ a {
 .cid-uccdJwjmGo [class*=" socicon-"]:before {
   line-height: 55px;
   padding: .6rem;
+}
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
 }
 .cid-uaFQVHh9tT {
   z-index: 1000;
@@ -3015,6 +3027,12 @@ a {
 .cid-uccdh6d8vU [class*=" socicon-"]:before {
   line-height: 55px;
   padding: .6rem;
+}
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
 }
 .cid-uaFQVHh9tT {
   z-index: 1000;
@@ -4717,6 +4735,12 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
+}
 .cid-uaFQVHh9tT {
   z-index: 1000;
   width: 100%;
@@ -5436,6 +5460,12 @@ a {
   line-height: 55px;
   padding: .6rem;
 }
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
+}
 .cid-uaFQVHh9tT {
   z-index: 1000;
   width: 100%;
@@ -6048,6 +6078,12 @@ a {
 .cid-ucccQZ2W6w [class*=" socicon-"]:before {
   line-height: 55px;
   padding: .6rem;
+}
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
 }
 .cid-uaFQVHh9tT {
   z-index: 1000;
@@ -6729,4 +6765,10 @@ a {
 .cid-uccatOUZYJ [class*=" socicon-"]:before {
   line-height: 55px;
   padding: .6rem;
+}
+.cid-uccJOVBT4s {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #c84673;
+  overflow: hidden;
 }
