create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7713,7 +7713,7 @@ a {
 .cid-uhzRY7KSOR {
   padding-top: 8rem;
   padding-bottom: 6rem;
-  background-color: #428715;
+  background-image: url("../../../assets/images/download-premium-vector-of-green-curve-frame-template-vector-by-kappy-about-basil-green-background-gradient-frame-backdrop-background-and-background-design-2343499.jpeg");
 }
 .cid-uhzRY7KSOR .mbr-fallback-image.disabled {
   display: none;
@@ -7731,7 +7731,7 @@ a {
   flex-direction: row-reverse;
 }
 .cid-uhzRY7KSOR .mbr-description {
-  color: #ffffff;
+  color: #2e481a;
 }
 .cid-uhzTjpYnSh {
   padding-top: 2rem;
